<resources>
    <string name="app_name">recipe</string>
    <string name="item_name_event_home_add">Ajouter</string>
    <string name="starttime">Heure de début</string>
    <string name="button_save">Sauvegarder</string>
    <string name="label_search">Faire une recherche</string>
    <string name="button_search">Recherche</string>
    <string name="button_eye">Voir</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_filter">Filtrer</string>
    <string name="item_name_action_add">Ajouter une action</string>
    <string name="item_name_action_stat">Rapport statistique</string>
    <string name="item_name_action_expense">Dépenses et commentaire</string>
    <string name="item_name_action_filter">Filtrer par</string>
    <string name="filter_date">Selectionnez une journée (optional)</string>
    <string name="button_complete">Finaliser</string>
    <string name="endtime">Heure de fin</string>
    <string name="amount_daily_recipe">Recette journalière</string>
    <string name="amount_daily_expense">Dépense journalière</string>
    <string name="more">En savoir plus</string>
    <string name="show_edit">Editer</string>
    <string name="show_edit_starttime">Editer l\'heure de début</string>
    <string name="show_delete">Supprimer</string>
    <string name="button_edit">Editer</string>
    <string name="action_state">Début</string>
    <string name="show_back_home">Page d\'accueil</string>
    <string name="show_start_time">Heure de début : </string>
    <string name="show_end_time">Heure de fin : </string>
    <string name="show_amount_daily_recipe">Le montant de la recette journalière  : </string>
    <string name="show_amount_daily_expense">Le montant des dépenses journalières  : </string>
    <string name="show_created_at">Date de création : </string>
    <string name="show_updated_at">Dernière modification : </string>
    <string name="filter_biggest">La plus grande dépense</string>
    <string name="filter_recipe">Le jour le plus long avec le moins de recette</string>
    <string name="filter_recipe_biggest">La plus grande recette</string>
    <string name="filter_recipe_plus">Le jour le plus long avec plus de recette</string>
    <string name="filter_start">De</string>
    <string name="filter_end">A</string>
    <string name="filter_with_date_time">Afficher la date et l\'heure</string>
    <string name="filter_recipe_smallest">La plus petite recette</string>
    <string name="filter_smallest_expense">La plus petite dépense</string>
    <string name="filter_reset">Réinitialiser</string>
    <string name="comment_show">Voir les commentaires</string>
    <string name="comment_add">Ajouter un commentaire</string>
    <string name="button_comment">Commentaires</string>
    <string name="button_add_comment">Commentée</string>
    <string name="comment">Commentaire</string>
    <string name="button_add">Ajouter</string>
    <string name="login_title">Se connecter</string>
    <string name="button_login">Se connecter</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="button_register">Créer un nouveau compte</string>
    <string name="button_forgot">Mot de passe oublié</string>
    <string name="button_password">Changer le mot de passe</string>
    <string name="password_new">Nouveau mot de passe</string>
    <string name="password_title">Nouveau mot de passe</string>
    <string name="forogot_title">Mot de passe oublié</string>
    <string name="pin">Code pin</string>
    <string name="fullname">Nom complet</string>
    <string name="register_title">Création du compte</string>
    <string name="item_name_action_profile">Mon compte</string>
    <string name="profile_info_title">Informations de profil</string>
    <string name="profile_info_description">Mettez à jour les informations de profil et le code pin de votre compte.</string>
    <string name="profile_password_title">Mettre à jour le mot de passe</string>
    <string name="profile_password_description">Assurez-vous que votre compte utilise un mot de passe long et aléatoire pour rester en sécurité.</string>
    <string name="profile_delete_title">Suppression du compte</string>
    <string name="profile_delete_description">Une fois votre compte supprimé, toutes ses ressources et données seront définitivement supprimées. Avant de supprimer votre compte, veuillez télécharger les données ou informations que vous souhaitez conserver</string>
    <string name="item_name_action_logout">Se déconnecter</string>
</resources>