<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp12"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starttime"
            style="@style/label"/>
        <TextView
            android:id="@+id/text_view_start_time"
            style="@style/field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp46"
            android:layout_marginBottom="@dimen/sp10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/sp12"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endtime"
            style="@style/label"/>
        <TextView
            android:id="@+id/text_view_end_time"
            style="@style/field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp46"
            android:layout_marginBottom="@dimen/sp10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/sp12"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_daily_recipe"
            style="@style/label"/>
        <EditText
            android:inputType="number"
            android:id="@+id/edit_text_amount_daily_recipe"
            style="@style/field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp46"
            android:layout_marginBottom="@dimen/sp10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/sp12"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_daily_expense"
            style="@style/label"/>
        <EditText
            android:inputType="number"
            android:id="@+id/edit_text_amount_daily_expense"
            style="@style/field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp46"
            android:layout_marginBottom="@dimen/sp10"
            />
    </LinearLayout>
</LinearLayout>