<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.RegisterActivity"
    android:padding="@dimen/sp20"
    android:background="@color/color_light"
    android:scrollbars="none"
    android:fillViewport="true"
    android:layout_gravity="center_vertical"
    >
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/sp20"
            android:background="@drawable/bg_filter"
            android:layout_marginTop="@dimen/sp20"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="@dimen/sp20"
                android:textStyle="bold"
                android:textSize="@dimen/sp20"
                android:textAlignment="center"
                android:text="@string/register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_marginBottom="@dimen/sp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edit_text_fullname"
                    style="@style/field"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sp46"
                    android:layout_marginBottom="@dimen/sp10"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/sp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edit_text_username"
                    style="@style/field"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sp46"
                    android:layout_marginBottom="@dimen/sp10"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/sp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pin"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edit_text_pin"
                    style="@style/field"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sp46"
                    android:layout_marginBottom="@dimen/sp10"
                    android:inputType="number"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/sp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    style="@style/label"/>
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edit_text_password"
                    style="@style/field"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sp46"
                    android:layout_marginBottom="@dimen/sp10"
                    />
            </LinearLayout>

            <Button
                android:layout_marginBottom="@dimen/sp20"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/button_register"
                android:text="@string/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>