<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ShowExpenseActivity"
    android:padding="@dimen/sp20"
    android:background="@color/color_light"
    >
    <LinearLayout
        android:padding="@dimen/sp20"
        android:background="@drawable/bg_container"
        android:layout_marginTop="@dimen/sp20"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="@dimen/sp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:layout_marginStart="@dimen/sp10"
                android:id="@+id/text_view_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:layout_marginStart="@dimen/sp10"
                android:id="@+id/text_view_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginBottom="@dimen/sp10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_amount_daily_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:background="@drawable/bg_container"
                android:padding="@dimen/sp12"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:id="@+id/text_view_amount_daily_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginBottom="@dimen/sp10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_amount_daily_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:background="@drawable/bg_container"
                android:padding="@dimen/sp12"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:id="@+id/text_view_amount_daily_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:layout_marginStart="@dimen/sp10"
                android:id="@+id/text_view_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:layout_marginStart="@dimen/sp10"
                android:id="@+id/text_view_updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


        <TextView
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="@dimen/sp15"
            android:layout_marginBottom="@dimen/sp20"
            android:id="@+id/text_view_count_comment"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <Button
            android:id="@+id/button_add_comment"
            android:text="@string/comment_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>