<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light"
    >
    <LinearLayout
        android:padding="@dimen/sp20"
        android:background="@drawable/bg_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginBottom="@dimen/sp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:layout_marginStart="@dimen/sp10"
                android:id="@+id/text_view_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:layout_marginStart="@dimen/sp10"
                android:id="@+id/text_view_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginBottom="@dimen/sp10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_amount_daily_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:background="@drawable/bg_container"
                android:padding="@dimen/sp12"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:id="@+id/text_view_amount_daily_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/sp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginBottom="@dimen/sp10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:text="@string/show_amount_daily_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:background="@drawable/bg_container"
                android:padding="@dimen/sp12"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:id="@+id/text_view_amount_daily_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <Button
            android:layout_marginTop="@dimen/sp5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_eye"
            app:icon="@drawable/ic_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_eye"/>

    </LinearLayout>
</LinearLayout>